--- a/public/css/dropdown-menu.css
+++ b/public/css/dropdown-menu.css
@@ -62,12 +62,11 @@
 
 #menuVertical ul li ul {
     position: fixed;
-    left: 30.3rem;
     display: none;
     width: 15%;
     height: 320px;
     top: 8.8rem;
-    padding: 20px;
+    padding: 15px 0px 0px 20px;
     background: #E6F1FA;
     border-radius: 0px 8px 8px 0px;
 }
@@ -77,6 +76,7 @@
     display: block;
 }
 #menuVertical ul li ul li a {
+    height: 40px;
     font-weight: 500;
     font-size: 18px;
     line-height: 33px;
