--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11992,7 +11992,7 @@ input {
     background: url(/images/closecart.png);
     filter: invert(1);
     top: 12px;
-    right: 24rem;
+    right: 24rem !important;
     background-position: center center;
     position: fixed;
     background-size: cover;
@@ -12478,7 +12478,7 @@ span {
 .cart-bottom {
     padding: 20px;
     width: 350px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     background: #E3EFFB;
     box-shadow: 0px -4px 4px #D0E1F1;
@@ -14479,4 +14479,10 @@ button:focus {outline:0;}
 .addToCartSvg {
     width: 26px;
     z-index: 10000;
+}
+
+@media only screen and (min-width: 1900px) {
+    #close-cart, #closecheck {
+        right: 33rem !important;
+    }
 }
