--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11367,10 +11367,8 @@ body {
 .product-img {
     display: flex;
     justify-content: center;
-    max-width: 80%;
     align-items: center;
-    height: 80%;
-    margin-top: 10%;
+    object-fit: scale-down;
 }
 
 .carousel-indicators li {
