--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4938,6 +4938,7 @@ input[type=button].btn-block {
 }
 
 .card {
+    height: 470px;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -10929,7 +10930,7 @@ a.text-dark:focus {
 }
 
 #for_the_scroll {
-    height: 100%;
+    height: 150%;
     overflow: scroll;
 }
 
@@ -11983,12 +11984,12 @@ input {
     background: transparent;
     border: none;
     box-shadow: none;
-    width: 0.484vw;
-    height: 1.484vw;
+    width: 2vw;
+    height: 1.5vw;
     background: url(/images/closecart.png);
     filter: invert(1);
     top: 12px;
-    right: 24rem !important;
+    right: 33rem !important;
     background-position: center center;
     position: fixed;
     background-size: cover;
@@ -14500,8 +14501,14 @@ button:focus {outline:0;}
     z-index: 10000;
 }
 
-@media only screen and (min-width: 1900px) {
+@media only screen and (max-width: 1900px) {
     #close-cart, #closecheck {
         right: 33rem !important;
+    }
+}
+
+@media only screen and (max-width: 1400px) {
+    #close-cart, #closecheck {
+        right: 23rem !important;
     }
 }
