--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10930,8 +10930,7 @@ a.text-dark:focus {
 }
 
 #for_the_scroll {
-    height: 150%;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .category {
@@ -12829,8 +12828,7 @@ and (max-device-width: 568px) {
 and (max-width: 768px) {
 
     #for_the_scroll {
-        height: 65%;
-        overflow: scroll;
+        overflow: auto;
     }
 
     .raiting {
@@ -14357,8 +14355,7 @@ and (min-width: 376px){
 @media only screen and (max-width: 345px) {
 
     #for_the_scroll {
-        height: 60% !important;
-        overflow: scroll;
+        overflow: auto;
     }
     .social {
         width: 49px;
